--- a/README.adoc
+++ b/README.adoc
@@ -24,9 +24,9 @@ Hit '<ctrl-d>' or 'osgi:shutdown' to shutdown Karaf.
 karaf@root()> list
 START LEVEL 100 , List Threshold: 80
 ID │ State  │ Lvl │ Version │ Name
-───┼────────┼─────┼─────────┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+───┼────────┼─────┼─────────┼──────────────────────────────────
 79 │ Active │  80 │ 3.15.0  │ camel-commands-core
 81 │ Active │  80 │ 3.15.0  │ camel-karaf-commands
 ----
 
-include::src/main/docs/camel-plateform.adoc
+After start, you can deploy your routes définitions.
