--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@ Karaf assembly ready to use whith Camel features.
 ----
 > mvn install
 > cd target/assembly
-> ./bin/karaf
+> ./bin/camel
 
    _____                              _      
   / ____|                            | |     
@@ -29,4 +29,4 @@ ID │ State  │ Lvl │ Version │ Name
 81 │ Active │  80 │ 3.15.0  │ camel-karaf-commands
 ----
 
-After start, you can deploy your routes définitions.
+After start, you can deploy your routes definitions.
